--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="glass-container">
         <header class="header">
-            <h1>🔥 KILO 🔥 </h1>
+            <h1>🔥 KILO-APP 🔥 </h1>
             <div class="usuario-selector">
                 <select id="usuario-actual">
                     <option value="">Seleccionar usuario...</option>
